# pygeodl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: get_bgs_seismic.py  get_unavco_gnss.py
pygeodl/: gnss.py  seismic.py
tests/: test_gnss.py  test_seismic.py
