[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeodl"
version = "0.0.1"
dependencies = [
  "pandas",
  "requests",
]
requires-python = ">=3.8"
authors = [
  {name = "Morgan Plain", email = "morgan@placeholder.com"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
description = "Download geoscience data with ease."
readme = "README.md"
license = "MIT"
keywords = ["geoscience", "data", "download", "gnss", "unavco"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/mp-v2/pygeodl.git"
"Bug Tracker" = "https://github.com/mp-v2/pygeodl/issues"
Changelog = "https://github.com/mp-v2/pygeodl/blob/main/CHANGELOG.md"
