[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeodl"
version = "0.0.2"
dependencies = [
  "pandas>=2.2.2",
  "requests>=2.32.3",
]
requires-python = ">=3.8"
authors = [
  {name = "Morgan Plain", email = "morgan@placeholder.com"},
]
maintainers = [
  {name = "Morgan Plain", email = "morgan@placeholder.com"}
]
description = "Download geoscience data with ease."
readme = "README.md"
license = "MIT"
keywords = ["geoscience", "data", "download", "gnss", "unavco"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.2",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/mp-v2/pygeodl.git"
"Bug Tracker" = "https://github.com/mp-v2/pygeodl/issues"
Changelog = "https://github.com/mp-v2/pygeodl/blob/main/CHANGELOG.md"
